# server/src/server.ts
@@ -16,14 +16,41 @@ const users: User[] = [
 	{ id: 1, name: 'Keira Holman', email: 'keira.holman@email.com' },
 	{ id: 2, name: 'Tiffany Harding', email: 'tiffany.harding@email.com' },
 	{ id: 3, name: 'Riya Pittman', email: 'riya.pittman@email.com' },
-	{ id: 4, name: 'Liberty Kent', email: 'liberty.kent@email.com' }
+	{ id: 4, name: 'Liberty Kent', email: 'liberty.kent@email.com' },
+	{ id: 5, name: 'John Doe', email: 'john.doe@email.com' },
+	{ id: 6, name: 'Jane Smith', email: 'jane.smith@email.com' },
+	{ id: 7, name: 'Alice Johnson', email: 'alice.johnson@email.com' },
+	{ id: 8, name: 'Bob Brown', email: 'bob.brown@email.com' },
+	{ id: 9, name: 'Eve White', email: 'eve.white@email.com' },
+	{ id: 10, name: 'Samuel Black', email: 'samuel.black@email.com' },
+	{ id: 11, name: 'Alex Turner', email: 'alex.turner@email.com' },
+	{ id: 12, name: 'Emily Davis', email: 'emily.davis@email.com' },
+	{ id: 13, name: 'Oliver Moore', email: 'oliver.moore@email.com' },
+	{ id: 14, name: 'Sophie Hill', email: 'sophie.hill@email.com' },
+	{ id: 15, name: 'Harry Murphy', email: 'harry.murphy@email.com' },
+	{ id: 16, name: 'Lily Green', email: 'lily.green@email.com' },
+	{ id: 17, name: 'Mia Adams', email: 'mia.adams@email.com' },
+	{ id: 18, name: 'Thomas Clark', email: 'thomas.clark@email.com' },
+	{ id: 19, name: 'Grace Evans', email: 'grace.evans@email.com' },
+	{ id: 20, name: 'William Baker', email: 'william.baker@email.com' },
+	{ id: 21, name: 'Scarlett Parker', email: 'scarlett.parker@email.com' },
+	{ id: 22, name: 'Jack Wilson', email: 'jack.wilson@email.com' },
+	{ id: 23, name: 'Ava Carter', email: 'ava.carter@email.com' },
+	{ id: 24, name: 'Lucas Stewart', email: 'lucas.stewart@email.com' },
+	{ id: 25, name: 'Aria Morris', email: 'aria.morris@email.com' },
+	{ id: 26, name: 'Henry Jenkins', email: 'henry.jenkins@email.com' },
+	{ id: 27, name: 'Ella Richardson', email: 'ella.richardson@email.com' },
+	{ id: 28, name: 'Leo Mitchell', email: 'leo.mitchell@email.com' },
+	{ id: 29, name: 'Violet Fisher', email: 'violet.fisher@email.com' },
+	{ id: 30, name: 'Max agag', email: 'max.harrissfson@email.com' },
+	{ id: 30, name: 'Max Harrison', email: 'max.harrison@email.com' },
 ];
 
 // Middleware для обработки CORS
 app.use((req: Request, res: Response, next: NextFunction) => {
 	res.setHeader('Access-Control-Allow-Origin', 'http://localhost:3000');
 	res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE');
-	res.setHeader('Access-Control-Allow-Headers', 'Content-Type, Authorization');
+	res.setHeader('Access-Control-Allow-Headers', 'Content-Type, Authorization, limit, offset');
 	next();
 });
 
@@ -32,9 +59,21 @@ app.use(express.json());
 // Swagger UI
 app.use('/api-docs', serve, setup(swaggerDocument));
 
-// Получение списка пользователей
+// Получение списка пользователей с учетом лимита и оффсета
 app.get('/users', (request: Request, response: Response) => {
-	return response.json(users);
+	const { limit, offset } = request.query;
+
+	let result = users;
+	if (limit && offset) {
+		const parsedLimit = parseInt(limit as string, 10);
+		const parsedOffset = parseInt(offset as string, 10);
+		result = users.slice(parsedOffset, parsedOffset + parsedLimit);
+	}
+
+	return response.json({
+		result,
+		count: users.length
+	});
 });
 
 // Создание нового пользователя
